--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hdanq.github.io/JenStore/",
+  "homepage": "https://hdanq.github.io/JenStore",
   "name": "jenstore",
   "private": true,
   "version": "0.0.0",
